# rs-mcp-lunar

./: .gitignore  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CLOUDFLARE_WORKER_DEPLOYMENT.md  COMPATIBILITY.md  ubuntu-deployment.html
scripts/: cloudflare-build.sh
src/: contract.rs  lib.rs  main.rs  validation.rs
src/domain/: mod.rs
src/domain/bazi/: engine.rs  mod.rs  model.rs  render.rs  shensha.rs
src/domain/ziwei/: engine.rs  locale.rs  mod.rs  render.rs
src/mcp/: mod.rs  protocol.rs  registry.rs  server.rs
src/transport/: cloudflare.rs  http.rs  mod.rs
tests/: reference_contract.rs
