[package]
name = "rs-mcp-lunar"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "BaZi and Zi Wei Dou Shu MCP server"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iztro = "=0.9.0"
jsonschema = { version = "=0.48.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tyme4rs = "=1.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = { version = "0.3.31", default-features = false }
worker = "=0.8.5"
worker-macros = "=0.8.5"

[profile.release]
codegen-units = 1
lto = true
# `strip = true` removes wasm-bindgen's externref transform markers before
# worker-build 0.8 can generate its module/catch wrappers. wasm-opt performs the
# final Wasm size optimization after bindgen, so only debug info is stripped here.
strip = "debuginfo"
